--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gen": "tsc md2cdk.ts && node md2cdk.js"
   },
   "dependencies": {
+    "@aws-cdk/aws-dynamodb": "^1.118.0",
     "@types/node": "^16.6.1",
     "typescript": "^4.3.5"
   }
